--- a/services.html
+++ b/services.html
@@ -171,6 +171,9 @@
  
         </section>
     </div>
+    <div class="internal-link">
+            <p>Read more about my <a href="blog.html">blogs</a> on AI & ML, Cloud, Transformation.</p>
+    </div>
 
     <footer>
         <p>&copy; 2024 Rahul Gupta. All Rights Reserved.</p>
