--- a/services.html
+++ b/services.html
@@ -169,10 +169,10 @@
                 <li><strong>Cloud-Native Product Development:</strong> Developed cloud-native products, leveraging the scalability and flexibility of cloud platforms to drive business growth.</li>
             </ul>
  
-        </section>
-    </div>
-    <div class="internal-link">
-            <p>Read more about my <a href="blog.html">blogs</a> on AI & ML, Cloud, Transformation.</p>
+         </section>
+        <div class="internal-link">
+            <p>Read more about my <a href="projects.html">work</a> in Health Care, Financial Services, Transportation, Call Center, BPO, and HRO.</p>
+        </div>
     </div>
 
     <footer>
