--- a/services.html
+++ b/services.html
@@ -171,7 +171,7 @@
  
          </section>
         <div class="internal-link">
-            <p>Read more about my <a href="projects.html">work</a> in Health Care, Financial Services, Transportation, Call Center, BPO, and HRO.</p>
+            <p>Read more about my <a href="blog.html">blogs</a> in Gen AI & ML, Cloud Engg, and Transformation.</p>
         </div>
     </div>
 
