--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <section id="bio" class="section">
             <h2>About Me</h2>
             <div class="flex-container">
-                <img src="https://via.placeholder.com/150" alt="Rahul Gupta - Chief Technology Officer at Conduent">
+                <img src="https://media.licdn.com/dms/image/C4D03AQEgAjrP7RvJ5w/profile-displayphoto-shrink_200_200/0/1645896906117?e=1698883200&v=beta&t=N65W_OQcZWQET42Idb28Xysm9PhY7JGGcc7i5BGO9QU" alt="Rahul Gupta - Chief Technology Officer at Conduent">
                 <div>
                     <p>A seasoned C-suite technology leader with extensive experience in managing large-scale technology transformations and product management. Currently, I serve as the Chief Technology Officer at Conduent, a global leader in digital interactions and business process outsourcing. With over 24 years of experience in the IT services industry, I have successfully delivered YOY revenue growth of 15%, optimized technology spend by 35%, and improved operating margins by 10%.</p>
                     <p>I have been managing a portfolio of all Technology Products development and client implementation services and drive company's revenue growth with a solution and client centric approach. Played dual roles of CTO and CIO, overseeing technology products build, client implementations, and overall client-side IT services.</p>
