--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
             padding: 10px 0;
             border-bottom: #77a1d3 3px solid;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
-            text-align: center;
         }
         header a {
             color: #fff;
@@ -50,13 +49,9 @@
         }
         header #branding {
             flex: 1;
-            text-align: center;
         }
         header #branding h1 {
             margin: 0;
-        }
-        header #branding p {
-            margin: 5px 0 0 0;
         }
         .section {
             padding: 20px;
@@ -73,7 +68,6 @@
             display: flex;
             align-items: flex-start;
             flex-wrap: wrap;
-            text-align: left;
         }
         .flex-container img {
             width: 150px;
@@ -104,7 +98,7 @@
             .flex-container {
                 flex-direction: column;
                 align-items: center;
-                text-align: left;
+                text-align: center;
             }
             .flex-container img {
                 margin: 0 0 20px 0;
@@ -135,7 +129,7 @@
         <section id="bio" class="section">
             <h2>About Me</h2>
             <div class="flex-container">
-                <img src="https://media.licdn.com/dms/image/C4D03AQEgAjrP7RvJ5w/profile-displayphoto-shrink_200_200/0/1645896906117?e=1698883200&v=beta&t=N65W_OQcZWQET42Idb28Xysm9PhY7JGGcc7i5BGO9QU" alt="Rahul Gupta - Chief Technology Officer at Conduent">
+                <img src="https://media.licdn.com/dms/image/D4E03AQEAxMkOAsPE5Q/profile-displayphoto-shrink_400_400/0/1722005117389?e=1727308800&v=beta&t=sAAiHYrvEsIfPNtySRD3TCbckvOZwp0RtQXCjrn9NRA" alt="Rahul Gupta - Chief Technology Officer at Conduent">
                 <div>
                     <p>A seasoned C-suite technology leader with extensive experience in managing large-scale technology transformations and product management. Currently, I serve as the Chief Technology Officer at Conduent, a global leader in digital interactions and business process outsourcing. With over 24 years of experience in the IT services industry, I have successfully delivered YOY revenue growth of 15%, optimized technology spend by 35%, and improved operating margins by 10%.</p>
                     <p>I have been managing a portfolio of all Technology Products development and client implementation services and drive company's revenue growth with a solution and client centric approach. Played dual roles of CTO and CIO, overseeing technology products build, client implementations, and overall client-side IT services.</p>
@@ -148,13 +142,10 @@
                         <li><strong>API & Microservices:</strong> Implementing API and microservices-based integration for seamless connectivity.</li>
                     </ul>
                     <p>Before joining Conduent, I held senior leadership roles at Capgemini, Infosys, and HCL, managing P&Ls of up to $1 billion. From my 17+ years in Technology Consulting, I have significant experience leading enterprise transformations across ERP, CRM, BI, HR, and EAI for clients in various industries. My core strength lies in aligning technology investments to drive revenue growth, improve profitability, and enhance quality for client retention.</p>
-                    <p>Aligning technology investments to revenue growth, improve profitability and at same time improve quality for client retention has been my strengths throughout my career at Consulting companies pre Conduent and last 7 years at Conduent. Transformation technology for any industry into a revenue & growth, and stock market valuation amidst change management culture is my core strength.</p>
+                    </p>Aligning technology investments to revenue growth, improve profitability and at same time improve quality for client retention has been my strengths throughout my career at Consulting companies pre Conduent and last 7 years at Conduent. Transformation technology for any industry into a revenue & growth, and stock market valuation amidst change management culture is my core strength.</p>
                 </div>
             </div>
         </section>
-        <div class="internal-link">
-            <p>Read more about my <a href="projects.html">work</a> in Health Care, Financial Services, Transportation, Call Center, BPO, and HRO.</p>
-        </div>
     </div>
 
     <footer>
