--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         }
         .flex-container div {
             flex: 1;
-            text-align: left;
+            text-align: justify;
         }
         @media (max-width: 768px) {
             .container {
@@ -105,7 +105,7 @@
                 margin: 0 0 20px 0;
             }
             .flex-container div {
-                text-align: left;
+                text-align: justify;
             }
         }
     </style>
