--- a/blog.html
+++ b/blog.html
@@ -287,7 +287,8 @@
             </article>
         </section>
     </div>
-
+  <p>For detailed Blogs, check them on my <a href="https://www.linkedin.com/in/rahulguptacto/">LinkedIn</a> </p>
+           
     <footer>
         <p>&copy; 2024 Rahul Gupta. All Rights Reserved.</p>
     </footer>
