--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@
                 </div>
             </div>
         </section>
+        <section id="projects-link" class="section">
+            <h2>Learn More About My Work</h2>
+            <p>Discover my work on products & platform solutions, I have led and managed, contributing to business growth and technological innovation.</p>
+            <p><a href="projects.html">Explore My Projects</a></p>
+        </section>
     </div>
 
     <footer>
