--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             color: #fff;
             text-align: center;
             padding: 10px 0;
+            text-align: justify;
         }
         .flex-container {
             display: flex;
@@ -105,6 +106,9 @@
                 margin: 0 0 20px 0;
             }
             .flex-container div {
+                text-align: justify;
+            }
+            footer {
                 text-align: justify;
             }
         }
@@ -151,8 +155,8 @@
             </div>
         </section>
         <section id="projects-link" class="section">
-            <h2>Learn More About My Work</h2>
-            <p>Discover my work on products & platform solutions, I have led and managed, contributing to business growth and technological innovation.</p>
+            <h2>Learn More About My Projects</h2>
+            <p>Discover the extensive range of projects I have led and managed, contributing to business growth and technological innovation.</p>
             <p><a href="projects.html">Explore My Projects</a></p>
         </section>
     </div>
