--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
             </div>
         </section>
         <section id="projects-link" class="section">
-            <h2>Learn More About My Projects</h2>
-            <p>Discover the extensive range of projects I have led and managed, contributing to business growth and technological innovation.</p>
+            <h2>Learn More About My Work</h2>
+            <p>Discover the extensive range of products & platform solutions I have led and managed, contributing to business growth and technological innovation.</p>
             <p><a href="projects.html">Explore My Projects</a></p>
         </section>
     </div>
