--- a/achievements.html
+++ b/achievements.html
@@ -26,7 +26,7 @@
             padding: 10px 0;
             border-bottom: #77a1d3 3px solid;
             display: flex;
-            justify-content: center; /* Ensure this is present */
+            justify-content: center;
             align-items: center;
         }
         header a {
@@ -39,7 +39,7 @@
             padding: 0;
             list-style: none;
             display: flex;
-            justify-content: center; /* Ensure this is present */
+            justify-content: center;
             margin: 0;
         }
         header li {
@@ -50,18 +50,19 @@
         }
         header #branding {
             flex: 1;
-            text-align: center; /* Ensure this is present */
+            text-align: center;
         }
         header #branding h1 {
             margin: 0;
         }
         header #branding p {
-            margin: 0; /* Ensure this is present to remove extra space */
+            margin: 0;
         }
         .section {
             padding: 20px;
             background: #fff;
             margin: 20px 0;
+            text-align: justify;
         }
         footer {
             background: #333;
