--- a/projects.html
+++ b/projects.html
@@ -62,6 +62,7 @@
             padding: 20px;
             background: #fff;
             margin: 20px 0;
+            text-align: justify;
         }
         footer {
             background: #333;
@@ -118,6 +119,7 @@
             font-size: 14px;
             color: #666;
             margin-top: 10px;
+            text-align: justify;
         }
         .disclaimer-small {
             font-size: 12px;
