--- a/services.html
+++ b/services.html
@@ -14,6 +14,7 @@
             padding: 0;
             background-color: #f4f4f4;
             color: #333;
+            text-align: justify;
         }
         .container {
             width: 80%;
