--- a/testimonials.html
+++ b/testimonials.html
@@ -62,6 +62,7 @@
             padding: 20px;
             background: #fff;
             margin: 20px 0;
+            text-align: justify;
         }
         footer {
             background: #333;
@@ -90,6 +91,9 @@
             header li {
                 padding: 10px 0;
                 border: none;
+            }
+            .section {
+                text-align: justify;
             }
         }
     </style>
