--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         }
         header #branding {
             flex: 1;
+            text-align: center;
         }
         header #branding h1 {
             margin: 0;
