--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         header #branding h1 {
             margin: 0;
         }
+        header #branding p {
+            margin: 5px 0 0 0;
+        }
         .section {
             padding: 20px;
             background: #fff;
