--- a/blog.html
+++ b/blog.html
@@ -129,22 +129,22 @@
 </head>
 <body>
     <header>
-        <div id="branding">
-            <h1>Rahul Gupta</h1>
-            <p>Chief Technology and Information Officer</p>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="achievements.html">Achievements</a></li>
-                <li><a href="services.html">Expertise</a></li>
-                <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div id="branding">
+        <h1 style="text-align: center;">Rahul Gupta</h1>
+        <p style="text-align: center;">Chief Technology and Information Officer</p>
+    </div>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="achievements.html">Achievements</a></li>
+            <li><a href="services.html">Expertise</a></li>
+            <li><a href="testimonials.html">Testimonials</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 
     <div class="container">
         <section id="blog" class="section">
