--- a/blog.html
+++ b/blog.html
@@ -128,10 +128,10 @@
     </script>
 </head>
 <body>
-    <header>
+<header>
     <div id="branding">
-        <h1 style="text-align: center;">Rahul Gupta</h1>
-        <p style="text-align: center;">Chief Technology and Information Officer</p>
+        <h1 style="text-align: center; margin: 0; padding: 10px 0;">Rahul Gupta</h1>
+        <p style="text-align: center; margin: 0; padding: 0;">Chief Technology and Information Officer</p>
     </div>
     <nav>
         <ul>
@@ -145,6 +145,7 @@
         </ul>
     </nav>
 </header>
+
 
     <div class="container">
         <section id="blog" class="section">
