--- a/blog.html
+++ b/blog.html
@@ -54,6 +54,10 @@
         }
         header #branding h1 {
             margin: 0;
+       
+        }
+        header #branding p {
+            margin: 0;
         }
         .section {
             padding: 20px;
