--- a/contact.html
+++ b/contact.html
@@ -78,6 +78,7 @@
             padding: 10px;
             font-size: 16px;
             width: 100%;
+            box-sizing: border-box;
         }
         form button {
             padding: 10px;
@@ -158,8 +159,8 @@
             <p>Or you can contact me at:</p>
             <p>
                 <a href="https://www.linkedin.com/in/rahulguptacto/">LinkedIn</a> |
-                <a href="mailto:rahulgupta_33@yahoo.com">rahulkel.gupta@gmail.com</a> |
-                <a href="mailto:rahul.gupta@outlook.com">rahul.guptac@outlook.com</a>
+                <a href="mailto:rahulgupta_33@yahoo.com">rahulgupta_33@yahoo.com</a> |
+                <a href="mailto:rahul.gupta@outlook.com">rahul.gupta@outlook.com</a>
             </p>
         </section>
     </div>
