--- a/contact.html
+++ b/contact.html
@@ -158,9 +158,8 @@
             </form>
             <p>Or you can contact me at:</p>
             <p>
-                <a href="https://www.linkedin.com/in/rahulguptacto/">LinkedIn</a> |
-                <a href="mailto:rahulgupta_33@yahoo.com">rahulgupta_33@yahoo.com</a> |
-                <a href="mailto:rahul.gupta@outlook.com">rahul.gupta@outlook.com</a>
+                <a href="https://www.linkedin.com/in/rahulguptacto/">LinkedIn</a> 
+                <a href="mailto:rahulgupta_33@yahoo.com">rahulkel.gupta@gamail.com</a> 
             </p>
         </section>
     </div>
