--- a/contact.html
+++ b/contact.html
@@ -159,7 +159,7 @@
             <p>Or you can contact me at:</p>
             <p>
                 <a href="https://www.linkedin.com/in/rahulguptacto/">LinkedIn</a> 
-                <a href="mailto:rahulgupta_33@yahoo.com">rahulkel.gupta@gamail.com</a> 
+                <a href="mailto:rahulgupta_33@yahoo.com">rahulkel.gupta@gmail.com</a> 
             </p>
         </section>
     </div>
