--- a/achievements.html
+++ b/achievements.html
@@ -180,7 +180,7 @@
             </ul>
         </section>
         <div class="internal-link">
-            <p>Explore my <a href="services.html">expertise</a> to understand how I can contribute to your organization's success.</p>
+            <p>My <a href="services.html">expertise</a> </p>
             <p style="font-size: smaller; text-align: center; line-height: 1.2;">*No Confidential data or statistics shared. Generalized and white labelled stats to protect data privacy of all companies I have worked for.</p>
         </div>
     </div>
