--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </section>
         <section id="projects-link" class="section">
             <h2>Learn More About My Work</h2>
-            <p>Discover the range of products & platform solutions I have led and managed, contributing to business growth and technological innovation.</p>
+            <p>Products & platform solutions I have led and managed, contributing to business growth and technological innovation.</p>
             <p><a href="projects.html">Explore My Projects</a></p>
         </section>
     </div>
