--- a/projects.html
+++ b/projects.html
@@ -191,7 +191,7 @@
             <p>These projects involved making the products modular, integrating AI and ML, and updating them to the latest standards, significantly reducing technology debt and enhancing operational efficiency.</p>
         </section>
         <div class="internal-link">
-            <p>Read more about my <a href="achievements.html">achievements*</a> and how they demonstrate my ability to drive technology transformation.</p>
+            <p>Read more about my <a href="achievements.html">results*</a> 
             <p class="disclaimer">*<span class="disclaimer-small">No confidential data or statistics shared. Generalized and white-labeled stats to protect data privacy of all companies I have worked for.</span></p>
         </div>
     </div>
