--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; URL='https://rahulguptacto.github.io/professional-website/'" />
     <title>Rahul Gupta - CTO | Technology Transformation Expert | Advisory Services</title>
     <meta name="description" content="Rahul Gupta, CTO at Conduent, offers expert advisory services in technology transformation, product modernization, and technology spend optimization.">
     <meta name="keywords" content="Rahul Gupta, CTO, technology transformation, product modernization, technology spend optimization, advisory services, CIO, CDO">
