--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; URL='https://rahulguptacto.github.io/professional-website/'" />
-    <title>Rahul Gupta - CTO | Technology Transformation Expert | Advisory Services</title>
+    <title>Redirecting...</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rahul Gupta, CTO at Conduent, offers expert advisory services in technology transformation, product modernization, and technology spend optimization.">
     <meta name="keywords" content="Rahul Gupta, CTO, technology transformation, product modernization, technology spend optimization, advisory services, CIO, CDO">
+    <script type="text/javascript">
+        window.location.href = "https://rahulguptacto.github.io/professional-website/";
+    </script>
     <style>
         body {
             font-family: Arial, sans-serif;
