--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="description" content="Rahul Gupta, CTO at Conduent, offers expert advisory services in technology transformation, product modernization, and technology spend optimization.">
     <meta name="keywords" content="Rahul Gupta, CTO, technology transformation, product modernization, technology spend optimization, advisory services, CIO, CDO">
     <script type="text/javascript">
-        window.location.href = "https://rahulguptacto.github.io/professional-website/";
+         setTimeout(function() {
+            window.location.href = "https://rahulguptacto.github.io/professional-website/";
+        }, 2000); // Redirect after 2 seconds
     </script>
     <style>
         body {
