--- a/index.html
+++ b/index.html
@@ -2,15 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Redirecting...</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rahul Gupta - CTO | Technology Transformation Expert | Advisory Services</title>
     <meta name="description" content="Rahul Gupta, CTO at Conduent, offers expert advisory services in technology transformation, product modernization, and technology spend optimization.">
     <meta name="keywords" content="Rahul Gupta, CTO, technology transformation, product modernization, technology spend optimization, advisory services, CIO, CDO">
-    <script type="text/javascript">
-         setTimeout(function() {
-            window.location.href = "https://rahulguptacto.github.io/professional-website/";
-        }, 2000); // Redirect after 2 seconds
-    </script>
     <style>
         body {
             font-family: Arial, sans-serif;
