--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     
     <!-- Favicon -->
     <link rel="icon" href="favicon.png" type="image/x-icon">
-<title>Rahul Gupta - CTO | Technology Transformation Expert | Advisory Services</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <title>Rahul Gupta - CTO | Technology Transformation Expert | Advisory Services</title>
     <meta name="description" content="Rahul Gupta, CTO at Conduent, offers expert advisory services in technology transformation, product modernization, and technology spend optimization.">
     <meta name="keywords" content="Rahul Gupta, CTO, technology transformation, product modernization, technology spend optimization, advisory services, CIO, CDO">
     <style>
