--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <title>Rahul Gupta - CTO | Technology Transformation Expert | Advisory Services</title>
-    <meta name="description" content="Rahul Gupta, CTO at Conduent, offers expert advisory services in technology transformation, product modernization, and technology spend optimization.">
-    <meta name="keywords" content="Rahul Gupta, CTO, technology transformation, product modernization, technology spend optimization, advisory services, CIO, CDO">
+    <meta name="description" content="Rahul Gupta, CTO at Conduent, has experience in technology transformation, product modernization, and technology spend optimization.">
+    <meta name="keywords" content="Rahul Gupta, CTO, technology transformation, product modernization, technology spend optimization, technology services, CIO, CDO">
     <style>
         body {
             font-family: Arial, sans-serif;
