--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <section id="bio" class="section">
             <h2>About Me</h2>
             <div class="flex-container">
-                <img src="https://media.licdn.com/dms/image/v2/D4E03AQGawN76v_7e_A/profile-displayphoto-shrink_400_400/B4EZTH6oqEHgAk-/0/1738520824844?e=1757548800&v=beta&t=6rx4FsoZObek8F4Y2Lm2WfAXTILcL2Bsdnd6cvEAqoA" alt="Rahul Gupta - Chief Technology Officer at Conduent">
+                <img src="     " alt="Rahul Gupta - Chief Technology Officer at Conduent">
                 <div>
                     <p>A seasoned C-suite technology leader with extensive experience in managing large-scale technology transformations and product management. Currently, I serve as the Chief Technology Officer at Conduent, a global leader in digital interactions and business process outsourcing. With over 24 years of experience in the IT services industry, I have successfully delivered YOY revenue growth of 15%, optimized technology spend by 35%, and improved operating margins by 10%.</p>
                     <p>I have been managing a portfolio of all Technology Products development and client implementation services and drive company's revenue growth with a solution and client centric approach. Played dual roles of CTO and CIO, overseeing technology products build, client implementations, and overall client-side IT services.</p>
