--- a/index.html
+++ b/index.html
@@ -147,10 +147,9 @@
 
     <div class="container">
         <section id="bio" class="section">
-            <h2>About Me</h2
+            <h2>About Me</h2>
             <div class="flex-container">
             <img src="profile.jpeg" alt="Profile picture">
-< 
                 <div>
                     <p>A seasoned C-suite technology leader with extensive experience in managing large-scale technology transformations and product management. Currently, I serve as the Chief Technology Officer at Conduent, a global leader in digital interactions and business process outsourcing. With over 24 years of experience in the IT services industry, I have successfully delivered YOY revenue growth of 15%, optimized technology spend by 35%, and improved operating margins by 10%.</p>
                     <p>I have been managing a portfolio of all Technology Products development and client implementation services and drive company's revenue growth with a solution and client centric approach. Played dual roles of CTO and CIO, overseeing technology products build, client implementations, and overall client-side IT services.</p>
